--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,12 +1,7 @@
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-div#body_content {
-    padding-top: 20px;
-    
-}
-
-div#submit {
-    padding-top: 10px;
-    padding-left: 80px;
+.field_with_errors{
+    display: inline-block;
+    border: 1px solid #f00;
 }
