--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,41 +1,47 @@
 <div class="panel panel-default">
-    <div class="panel-heading">
-        メッセージ一覧
-    </div>
+  <div class="panel-heading">
+    メッセージ一覧
+  </div>
     
-    <div class="panel-body">
-        <% @messages.each do |message| %>
-        <span class="label label-info"><%= message.name %></span>
-        <%= message.body %>
-        <br>
-        <% end %>
-    </div>
+  <div class="panel-body">
+    <% @messages.each do |message| %>
+      <span class="label label-info"><%= message.name %></span>
+      <%= message.body %>
+      <br>
+    <% end %>
+  </div>
 </div>
-<%= form_for(@message) do |f| %>
-    <div class="form-group">
-        <label for="name_content" class="col-sm-1 control-label">名前:</label>
-        <div class="col-sm-5">
-            <%= f.text_field :name, :class =>"form-control" %>
-        </div>
+
+<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
+  <% if @message.errors.present? %>
+    <div class="alert alert-danger">
+      <%= alert %>
+      <ul>
+        <% @message.errors.full_messages.each do |full_message| %>
+          <li>
+            <%= full_message %>
+          </li>
+        <% end %>
+      </ul>
     </div>
-    <br/>
-    <br/>
-    <div class="form-group">
-        <div id="body_content">
-            <label for="body_label" class="col-sm-1 control-label">内容:</label>
-            <div class="col-sm-5">
-                <div id="body_textarea">
-                    <%= f.text_area :body, :class =>"form-control", :rows =>"3" %>
-                </div>
-            </div>
-        </div>
+  <% end %>
+  <div class="form-group">
+    <label for="message_name" class="col-sm-2 control-label">名前:</label>
+    <div class="col-sm-8">
+      <%= f.text_field :name, :class =>"form-control" %>
     </div>
-    <div class="form-group">
-        <div class="col-sm-offset2 col-sm-10">
-            <div id="submit">
-                <input name="commit" class="btn btn-sm btn-primary" type="submit" value="Create Message"/>
-            </div>
-        </div>
+  </div>
+
+  <div class="form-group">
+    <label for="message_body" class="col-sm-2 control-label">内容:</label>
+    <div class="col-sm-8">
+      <%= f.text_area :body, :class =>"form-control" %>
     </div>
-<!--    <%= f.submit class: "btn btn-sm btn-primary" %>-->
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-8 col-sm-offset-2">
+      <%= f.submit class: "btn btn-primary btn-block form-control" %>  
+    </div>
+  </div>
 <% end %>
