--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -19,6 +19,13 @@
   </div>
 
   <div class="form-group">
+    <label for="message_age" class="col-sm-2 control-label">年齢:</label>
+    <div class="col-sm-8">
+      <%= f.number_field :age, :class =>"form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="message_body" class="col-sm-2 control-label">内容:</label>
     <div class="col-sm-8">
       <%= f.text_area :body, :class =>"form-control" %>
